tests/negative/gold/interface_cycle_test.gold
tests/negative/interface_cycle_test.toit:5:11: error: Cycle in super/interface chain
interface A B:
          ^
tests/negative/interface_cycle_test.toit:5:13: error: This clause contributes to the cycle
interface A B:
            ^
tests/negative/interface_cycle_test.toit:7:13: error: This clause contributes to the cycle
interface B A:
            ^
Compilation failed.
